# route67

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
benchmarks/: benchmark_router.py  router_seed_table.json
llm_router/: controller.py  embedder.py  logging_utils.py  prompts.py  routing_table.py
src/llm_router/: __init__.py  config.py  controller.py  escalation.py  prompts.py  routing.py  routing_table.py  semantic.py
tests/: helpers.py  test_controller.py  test_escalation.py  test_prompts.py  test_routing_table.py
tests/fixtures/: sample_routing_table.json
