[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "route67"
dynamic = ["version"]
description = "A semantic LLM router for OpenAI-compatible chat completions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "route67 contributors" }]
keywords = ["llm", "router", "openai", "semantic-routing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "model2vec>=0.6,<1",
  "numpy>=1.24",
  "openai>=1.0,<3",
]

[project.urls]
Homepage = "https://github.com/SmallChungus1/route67"
Repository = "https://github.com/SmallChungus1/route67"
Issues = "https://github.com/SmallChungus1/route67/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.hatch.version]
path = "src/llm_router/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
